modificados:     src/func/router/contact.route.js 	modificados:     src/func/router/index.route.js 	modificados:     src/func/router/user.route.js 	modificados:     src/public/js/alert.js 	modificados:     src/public/js/logout.js 	modificados:     src/views/add.ejs 	modificados:     src/views/contacts.ejs 	modificados:     src/views/edit.ejs 	modificados:     src/views/partials/scripts.ejs

--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -25,6 +25,7 @@
                 </li>
             </ul>
         </nav> 
+        <input type="hidden" value="<%= user %>" id="account_JS">
         <div class="content">
             <form action="/contacts/<%= user %>/update/<%= data[0].name %>/<%= data[0].id %>" method="POST">
                 <div class="grid_2">
@@ -52,6 +53,7 @@
         </div>
     </div>
     <%- include('partials/scripts') %>
+    <script src="/js/logout.js"></script>
     <script src="/js/alert.js"></script>
     <% if(alert == true) { %>
         <script>
