--- a/src/views/add.ejs
+++ b/src/views/add.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/user.css">
 </head>
 <body>
+    <input type="hidden" value="<%= user %>" id="account_JS">
     <div class="container">
         <nav class="principal element-center">
             <ul class="nav-menu">
@@ -50,6 +51,7 @@
         </div>
     </div>
     <%- include('partials/scripts') %>
+    <script src="/js/logout.js"></script>
     <% if(alert == true) { %>
         <script>
             Swal.fire(
