--- a/src/views/contacts.ejs
+++ b/src/views/contacts.ejs
@@ -20,7 +20,7 @@
                     <a href="/profile/<%= user %>/contacts">Your Contacts</a>
                 </li>
                 <li>    
-                    <a class="pointer" onclick="logout()">Log Out</a>
+                    <a class="pointer" id="logout">Log Out</a>
                 </li>
             </ul>
         </nav>
@@ -47,7 +47,7 @@
                     <input type="hidden" class="id_contact-JS" value="<%= data[i].id %>">
                         <ul class="options">
                             <li>
-                                <a class="delete pointer" onclick="del()">
+                                <a class="delete pointer">
                                     <i class="fa-solid fa-eraser"></i>
                                 </a>
                             </li>
@@ -63,6 +63,7 @@
         </div> 
     </div>
     <%- include('partials/scripts') %>
+    <script src="/js/logout.js"></script>
     <script src="/js/alert.js"></script>
     <script src="/js/counter.js"></script>
 </body>
